--- a/src/main/docs/guide/embeddedProperties.adoc
+++ b/src/main/docs/guide/embeddedProperties.adoc
@@ -1,3 +1,5 @@
+== Embedded Properties
+
 Embedded properties are handled in a special way by the `f:field` and `f:all` tags. If the `property` attribute you pass to `f:field` is an embedded property then the tag recursively renders each individual property of the embedded class with a surrounding `fieldset`. For example if you have a `Person` class with a `name` property and an `Address` embedded class with `street`, `city` and `country` properties `<f:field bean="person" property="address">` will effectively do this:
 
 [source,groovy]
