--- a/src/main/docs/guide/introduction.adoc
+++ b/src/main/docs/guide/introduction.adoc
@@ -1,3 +1,4 @@
+== Introduction
 
 The _Fields plugin_ allows you to customize the rendering of input fields for properties of domain objects, command beans and POGOs based on their type, name, etc. The plugin aims to:
 
@@ -9,6 +10,10 @@ The _Fields plugin_ allows you to customize the rendering of input fields for pr
 * Support embedded properties of _GORM_ domain classes.
 
 == Changelog
+
+=== Version 2.2.7
+* BugFix: The fix for #257 did not work as described, but now it does.
+* Improvement: Documentation has been improved with more examples for the various tags.
 
 === Version 2.2.6
 
