--- a/src/main/docs/guide/themes.adoc
+++ b/src/main/docs/guide/themes.adoc
@@ -1,3 +1,5 @@
+== Themes
+
 Since version 2.1.4 It is possible to create themes to provide set of templates for different css frameworks or form layouts.
 For example, a bootstrap-fields plugin can provide different themes (eg bs-horizontal, bs-vertical) to support horizontal and vertical form layouts. And another plugin can provide theme for purecss framework.
 
