--- a/src/main/docs/ref/Tags/all.adoc
+++ b/src/main/docs/ref/Tags/all.adoc
@@ -1,6 +1,6 @@
 ==== f:all
 
-===== Description
+===== Purpose
 
 Renders fields for all properties of an object by using `f:field` for each property.
 
@@ -10,6 +10,8 @@ The `id`, `version`, `dateCreated` and `lastUpdated` properties are skipped on d
 ===== Attributes
 
 .Attributes for f:all
+[options="header",cols="1,1,3"]
+
 |===
 |Name | Required | Description
 
