--- a/src/main/docs/ref/Tags/display.adoc
+++ b/src/main/docs/ref/Tags/display.adoc
@@ -1,6 +1,6 @@
 ==== f:display
 
-===== Description
+===== Purpose
 
 `f:display` renders a property for display. If there is no `_displayWrapper` template in scope the tag will simply render the property value.
 
@@ -43,6 +43,7 @@ Since then you can specify the folders where the templates are located. You can 
 ===== Attributes
 
 .Attributes for f:display
+[options="header",cols="1,1 ,3"]
 |===
 |Name | Required | Description
 
@@ -52,7 +53,7 @@ Since then you can specify the folders where the templates are located. You can 
 
 |*property*
 | No
-|The path to the property. This can include any level of nesting and numeric or string indexes. For example `employees[0].address[home].street` is a valid path. If absent, all properties will be displayed.
+|The path to the property. This can include any level of nesting and numeric or string indexes. For example `employees[0].address[home].street` is a valid path. If absent, all properties will be displayed via the `grails-app/views/templates/_fields/_list.gsp` (see the template code below).
 
 |*value*
 |No
@@ -86,3 +87,7 @@ Since then you can specify the folders where the templates are located. You can 
 
 
 Any additional attributes are passed to the rendered template.
+
+==== Special case for rendering all properties of a bean
+
+When `f:display` is used without a `property` then all bean properties are rendered. This is done with the `grails-app/views/templates/_fields/_list.gsp` template. The default template can be found link:https://github.com/grails-fields-plugin/grails-fields/blob/master/grails-app/views/templates/_fields/_list.gsp[on GitHub]
