--- a/src/main/docs/ref/Tags/field.adoc
+++ b/src/main/docs/ref/Tags/field.adoc
@@ -34,8 +34,10 @@ Since version 1.5 you can specify which specific templates are going to be used 
 You can accomplish this using new attributes: _wrapper_, _widget_ and _templates_. (See attributes section)
 
 Since version 2.1.4 you can specify the theme to be used.
-<f:field bean="person" property="name" theme="bs-horizontal"/>
 
+----
+<f:field bean="person" property="name" theme="bs-horizontal"/>
+----
 
 [source,groovy]
 ----
@@ -57,60 +59,81 @@ The `f:field` tag handles embedded domain properties in a special way. See link:
 ===== Attributes
 
 
-.Attributes for f:field
+.Attributes for `f:field`
+
+[options="header",cols="1,1,3"]
 |===
 |Name | Required | Description
 
-|*bean*
+|`bean`
 |yes for `f:widget` if not inside `f:with`, optional for `f:field`
 |The bean whose property is being rendered. This can be the object itself or the name of a page-scope variable.
 
-|*property*
+|`property`
 | yes
 |The path to the property. This can include any level of nesting and numeric or string indexes. For example `employees[0].address[home].street` is a valid path. If absent, all properties will be displayed.
 
-|*value*
+|`value`
 |No
 |Overrides the actual value of the property.
 
-|*default*
+|`default`
 | No
 | A default value for the property that will be used if the actual property value is `false`.
 
-|*required*
+|`required`
 |No
 |Overrides the required status of the property. By default this is worked out based on the property's constraints.
 
-|*invalid*
+|`invalid`
 |No
 |Overrides the validity of the property. By default this is worked out using the bean's _errors_ property for domain and command objects.
 
-|*label*
+|`label`
 |No
 |Overrides the field label passed to the template. This value may either be an i18n key or a literal string.
 
-|*prefix*
+|`prefix`
 |No
 |A string (including the trailing period) that should be appended before the input name such as `name="${prefix}propertyName"`.  The label is also modified.
 
-|*wrapper*
+|`wrapper`
 |No
 |Specifies the name of the folder inside `_fields` where the `_wrapper.gsp` template is located.
 
-|*widget*
+|`widget`
 |No
-|Specifies the name of the folder inside _\_fields_ where the _\_widget.gsp_ template is located.
+|Specifies the name of the folder inside `\_fields` where the `\_widget.gsp` template is located.
 
-|*templates*
+|`templates`
 |No
 |Specifies the name of the folder inside `_fields` where the `_wrapper.gsp` and `_widget.gsp` templates are located. It is a shorthand for specifying both (`wrapper` and `widget`).
 
-|*theme*
+|`theme`
 |String
 |Theme to use if available.
 
 |===
 
 
-
 Any additional attributes are passed to the rendered template. Any additional attributes prefixed with `widget-` are instead passed to the widget template or rendered on the default input.
+
+===== Example of overriding a `_wrapper.gsp`
+
+If you want to override a `f:wrapper` to be used for all *widgets* then create a file  with content like this:
+
+.grails-app/views/_fields/default/_wrapper.gsp
+----
+<div class="form-group ${invalid ? 'has-error' : ''}">
+    <label for="${property}">${label} ${required ? '*' : ''}</label>
+
+    <div>
+        <f:widget property="${property}"/>
+        <g:if test="${errors}">
+            <g:each in="${errors}" var="error">
+                <span class="help-block"><g:message error="${error}"/></span>
+            </g:each>
+        </g:if>
+    </div>
+</div>
+----
