--- a/src/main/docs/ref/Tags/with.adoc
+++ b/src/main/docs/ref/Tags/with.adoc
@@ -1,6 +1,6 @@
 ==== f:with
 
-===== Description
+===== Purpose
 
 Places a bean in scope so that the bean attribute can be omitted on contained tags.
 
@@ -14,9 +14,7 @@ Places a bean in scope so that the bean attribute can be omitted on contained ta
 </f:with>
 ----
 
-
 ===== Attributes
-
 
 [format="csv", options="header"]
 |===
