--- a/src/main/docs/guide/introduction.adoc
+++ b/src/main/docs/guide/introduction.adoc
@@ -11,6 +11,11 @@ The _Fields plugin_ allows you to customize the rendering of input fields for pr
 
 == Changelog
 
+=== Version 2.2.8
+* BugFix: Table Tag does not render transient fields correctly (Issue https://github.com/grails-fields-plugin/grails-fields/issues/264[#264])
+* BugFix: Table Tag does not render references correctly! (Issue https://github.com/grails-fields-plugin/grails-fields/issues/269[#269])
+* BugFix: Fix XSS vulnerability when rendering beans (Issue https://github.com/grails-fields-plugin/grails-fields/issue/278[#278])
+
 === Version 2.2.7
 * BugFix: The fix for #257 did not work as described, but now it does.
 * Improvement: Documentation has been improved with more examples for the various tags.
