Updated releasenotes with missing Git Diffs

--- a/src/main/docs/guide/introduction.adoc
+++ b/src/main/docs/guide/introduction.adoc
@@ -10,15 +10,20 @@ The _Fields plugin_ allows you to customize the rendering of input fields for pr
 * Support embedded properties of _GORM_ domain classes.
 
 == Changelog
+=== Version 2.2.9.BUILD-SNAPSHOT
+(no changes yet)
+https://github.com/grails-fields-plugin/grails-fields/compare/v2.2.8...v2.2.9[GitHub diff]
 
 === Version 2.2.8
 * BugFix: Table Tag does not render transient fields correctly (Issue https://github.com/grails-fields-plugin/grails-fields/issues/264[#264])
 * BugFix: Table Tag does not render references correctly! (Issue https://github.com/grails-fields-plugin/grails-fields/issues/269[#269])
 * BugFix: Fix XSS vulnerability when rendering beans (Issue https://github.com/grails-fields-plugin/grails-fields/issue/278[#278])
+https://github.com/grails-fields-plugin/grails-fields/compare/v2.2.7...v2.2.8[GitHub diff]
 
 === Version 2.2.7
 * BugFix: The fix for #257 did not work as described, but now it does.
 * Improvement: Documentation has been improved with more examples for the various tags.
+https://github.com/grails-fields-plugin/grails-fields/compare/v2.2.6...v2.2.7[GitHub diff]
 
 === Version 2.2.6
 
