docs: update with the new 'template' parameter

--- a/src/main/docs/ref/Tags/table.adoc
+++ b/src/main/docs/ref/Tags/table.adoc
@@ -49,6 +49,7 @@ When *theme* is specified, the _\_display_ template will be searched first in *t
 |*order*|||Comma-separated `String` or `List` of properties which represents the order in which the tag should display them.
 |*theme*|String||Theme to use if available.
 |*maxProperties*|Number|7|The maximum number of properties to display when rendering the table. If zero is specified all columns are shown, otherwise `properties[0..<maxProperties]` are shown. `maxProperties` can be negative.
+|*template*|String|'table'|Alternative template for table rendering. Templates should be in the 'grails-app/views/templates/_fields/' folder.
 |===
 
  Any additional attributes are passed to the rendered template.
