--- a/src/main/docs/ref/Tags/table.adoc
+++ b/src/main/docs/ref/Tags/table.adoc
@@ -34,7 +34,18 @@ The template for `<f:table/>` should be in
 grails-app/views/templates/_fields/_table.gsp
 ----
 
-When *theme* is specified, the _\_display_ template will be searched first in *theme*.
+but you can have multiple table templated, if you specify the template property.
+All templates should still be located in `view/templates/_fields/`, the example below uses 4 different templates for table.
+
+[source]
+----
+<f:table collection="myList" myProperty="Template: view/templates/_fields/_table.gsp" />
+<f:table collection="${demoList}" template="table3" myProperty="Template: view/templates/_fields/_table3.gsp" />
+<f:table collection="${demoList}" template="tables/table2" myProperty="Template: in view/templates/_fields/tables/_table2.gsp" />
+<f:table collection="${demoList}" template="tables/table" myProperty="Template: view/templates/_fields/tables/_table.gsp" />
+----
+
+When *theme* is specified, the _\_display_ template will be searched first in *theme*, but the theme property does *not* directly apply to table.
 
 ===== Attributes
 
@@ -56,7 +67,9 @@ When *theme* is specified, the _\_display_ template will be searched first in *t
 
 ===== Modifying the `_table.gsp` template.
 
-To make you own version of a `f:table` template, the file should be located in `grails-app/views/templates/_fields/_table.gsp`. You can find a starting point for a new file link:https://github.com/grails-fields-plugin/grails-fields/blob/master/grails-app/views/templates/_fields/_table.gsp[on GitHub]
+To make you own version of a `f:table` template, the file should be located in `grails-app/views/templates/_fields/_table.gsp`
+unless a different location is specified with the template property.
+You can find a starting point for a new file link:https://github.com/grails-fields-plugin/grails-fields/blob/master/grails-app/views/templates/_fields/_table.gsp[on GitHub]
 
 ====== Model in the template
 
