--- a/src/main/docs/guide/introduction.adoc
+++ b/src/main/docs/guide/introduction.adoc
@@ -10,27 +10,39 @@ The _Fields plugin_ allows you to customize the rendering of input fields for pr
 * Support embedded properties of _GORM_ domain classes.
 
 == Changelog
-=== Version 2.2.9.BUILD-SNAPSHOT
-(no changes yet)
-https://github.com/grails-fields-plugin/grails-fields/compare/v2.2.8...v2.2.9[GitHub diff]
+=== Version 2.2.11.BUILD-SNAPSHOT
 
-=== Version 2.2.8
+=== Version 2.2.10
+
+https://github.com/grails-fields-plugin/grails-fields/compare/v2.2.8...v2.2.10[GitHub diff]
+* Improvement: Additional attributes passed to the `_table.gsp` template
+
+=== Version 2.2.9 
+(Not released due to build error)
+
+=== Version 2.2.8 
+
+https://github.com/grails-fields-plugin/grails-fields/compare/v2.2.7...v2.2.8[GitHub diff]
+
 * BugFix: Table Tag does not render transient fields correctly (Issue https://github.com/grails-fields-plugin/grails-fields/issues/264[#264])
 * BugFix: Table Tag does not render references correctly! (Issue https://github.com/grails-fields-plugin/grails-fields/issues/269[#269])
 * BugFix: Fix XSS vulnerability when rendering beans (Issue https://github.com/grails-fields-plugin/grails-fields/issue/278[#278])
-https://github.com/grails-fields-plugin/grails-fields/compare/v2.2.7...v2.2.8[GitHub diff]
+
 
 === Version 2.2.7
-* BugFix: The fix for #257 did not work as described, but now it does.
-* Improvement: Documentation has been improved with more examples for the various tags.
+
 https://github.com/grails-fields-plugin/grails-fields/compare/v2.2.6...v2.2.7[GitHub diff]
 
+* BugFix: The fix for #257 did not work as described, but now it does.
+* Improvement: Documentation has been improved with more examples for the various tags.
+
 === Version 2.2.6
+
+https://github.com/grails-fields-plugin/grails-fields/compare/v2.2.5...v2.2.6[GitHub diff]
 
 * Improvement: Documentation of `maxProperties` on `<f:table/>`
 * Improvement: `<f:table\>` can now show `id`, `lastUpdated` and `dateCreated` (see link:../ref/Tags/table.html[f:table] doc). Injecting `DomainModelService` instead of instantiating `DomainModelServiceImpl` in `FormsFieldTagLib` (Issue https://github.com/grails-fields-plugin/grails-fields/issues/257[#257])
 
-https://github.com/grails-fields-plugin/grails-fields/compare/v2.2.5...v2.2.6[GitHub diff]
 
 === Version 2.2.4/2.2.5
 * Improvement: Introduced `maxProperties` attribute to `<f:table/>`
