Preliminary support for GitHub actions Documentation build by asciidoc plugin Docs moved to default folders

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -1,5 +1,5 @@
-= My Title
-:version: 2.1.4-SNAPSHOT
+= Fields Plugin
+:version: 3.0.0-SNAPSHOT
 :source-highlighter: coderay
 :imagesdir: ./images
 
