Updated release-notes and README.md

--- a/src/docs/asciidoc/introduction.adoc
+++ b/src/docs/asciidoc/introduction.adoc
@@ -1,6 +1,6 @@
 == Introduction
 
-The _Fields plugin_ allows you to customize the rendering of input fields for properties of domain objects, command beans and POGOs based on their type, name, etc. The plugin aims to:
+The *Fields plugin* allows you to customize the rendering of input fields for properties of domain objects, command beans and POGOs based on their type, name, etc. The plugin aims to:
 
 * Use good defaults for fields.
 * Make it very easy to override the field rendering for particular properties or property types without having to replace entire form templates.
@@ -10,9 +10,30 @@ The _Fields plugin_ allows you to customize the rendering of input fields for pr
 * Support embedded properties of _GORM_ domain classes.
 
 == Changelog
+
+=== Version 4.0.0-RC1 - Grails 4.1.x
+**Important**
+
+New `group` id. In your build.gradle file, use:
+
+----
+compile 'io.github.gpc:fields:4.0.0-RC1'
+----
+
+Changelog:
+https://github.com/gpc/fields/compare/v3.0.0.RC1...v4.0.0-RC1
+
+Thank you for all the contributions!
+
+=== Version 3.0.0.RC1 - Grails 4.0.x
+Last version that is on the "old" group `org.grails.plugins` 
+
+Changelog:
+https://github.com/gpc/fields/compare/v2.2.10...v3.0.0.RC1
+
 === Version 2.2.9.BUILD-SNAPSHOT
-(no changes yet)
-https://github.com/grails-fields-plugin/grails-fields/compare/v2.2.8...v2.2.9[GitHub diff]
+Changelog: 
+https://github.com/grails-fields-plugin/grails-fields/compare/v2.2.8...v2.2.9
 
 === Version 2.2.8
 * BugFix: Table Tag does not render transient fields correctly (Issue https://github.com/grails-fields-plugin/grails-fields/issues/264[#264])
