--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -3,35 +3,31 @@
 :source-highlighter: coderay
 :imagesdir: ./images
 
-[[introduction]]
-
+[#introduction]
 include::introduction.adoc[]
 
-[[usage]]
+[#installation]
+include::installation.adoc[]
 
+[#usage]
 include::usage.adoc[]
 
-[[customizingFieldRendering]]
-
+[#customizingFieldRendering]
 include::customizingFieldRendering.adoc[]
 
-[[embeddedProperties]]
-
+[#embeddedProperties]
 include::embeddedProperties.adoc[]
 
-[[themes]]
-
+[#themes]
 include::themes.adoc[]
 
-[[includingTemplatesInPlugins]]
-
+[#includingTemplatesInPlugins]
 include::includingTemplatesInPlugins.adoc[]
 
-[[performance]]
-
+[#performance]
 include::performance.adoc[]
 
-[[reference]]
+[#reference]
 == Reference
 
 [[ref-tags]]
@@ -77,3 +73,5 @@ include::ref/Tags/widget.adoc[]
 
 include::ref/Tags/with.adoc[]
 
+[#changelog]
+include::changelog.adoc[]
