--- a/src/docs/asciidoc/changelog.adoc
+++ b/src/docs/asciidoc/changelog.adoc
@@ -1,5 +1,17 @@
 == Changelog
 
+=== Version 5.0.0 - Grails 5.3.x
+
+In your `build.gradle` file, use:
+
+[source,groovy]
+----
+implementation 'io.github.gpc:fields:5.0.0'
+----
+
+Changelog:
+https://github.com/gpc/fields/compare/v4.0.0\...v5.0.0
+
 === Version 4.0.0 - Grails 4.1.x
 
 **Important**
@@ -9,7 +21,7 @@ New `group` id.
 
 In your `build.gradle` file, use:
 
-[source,groovy,subs="attributes"]
+[source,groovy]
 ----
 compile 'io.github.gpc:fields:4.0.0'
 ----
