--- a/src/docs/asciidoc/installation.adoc
+++ b/src/docs/asciidoc/installation.adoc
@@ -4,6 +4,6 @@ The plugin is available on Maven Central and should be a dependency like this:
 [source,groovy,subs="attributes"]
 ---- 
 dependencies {
-    compile 'io.github.gpc:fields:{version}'
+    implementation 'io.github.gpc:fields:{version}'
 }
 ----
