--- a/src/docs/asciidoc/introduction.adoc
+++ b/src/docs/asciidoc/introduction.adoc
@@ -36,8 +36,8 @@ Changelog:
 https://github.com/grails-fields-plugin/grails-fields/compare/v2.2.8...v2.2.9
 
 === Version 2.2.8
-* BugFix: Table Tag does not render transient fields correctly (Issue https://github.com/grails-fields-plugin/grails-fields/issues/264[#264])
-* BugFix: Table Tag does not render references correctly! (Issue https://github.com/grails-fields-plugin/grails-fields/issues/269[#269])
+* BugFix: Table Tag does not render transient fields correctly (Issue https://github.com/gpc/fields/issues//264[#264])
+* BugFix: Table Tag does not render references correctly! (Issue https://github.com/gpc/fields/issues//269[#269])
 * BugFix: Fix XSS vulnerability when rendering beans (Issue https://github.com/grails-fields-plugin/grails-fields/issue/278[#278])
 https://github.com/grails-fields-plugin/grails-fields/compare/v2.2.7...v2.2.8[GitHub diff]
 
@@ -49,7 +49,7 @@ https://github.com/grails-fields-plugin/grails-fields/compare/v2.2.6...v2.2.7[Gi
 === Version 2.2.6
 
 * Improvement: Documentation of `maxProperties` on `<f:table/>`
-* Improvement: `<f:table\>` can now show `id`, `lastUpdated` and `dateCreated` (see link:../ref/Tags/table.html[f:table] doc). Injecting `DomainModelService` instead of instantiating `DomainModelServiceImpl` in `FormsFieldTagLib` (Issue https://github.com/grails-fields-plugin/grails-fields/issues/257[#257])
+* Improvement: `<f:table\>` can now show `id`, `lastUpdated` and `dateCreated` (see link:../ref/Tags/table.html[f:table] doc). Injecting `DomainModelService` instead of instantiating `DomainModelServiceImpl` in `FormsFieldTagLib` (Issue https://github.com/gpc/fields/issues//257[#257])
 
 https://github.com/grails-fields-plugin/grails-fields/compare/v2.2.5...v2.2.6[GitHub diff]
 
@@ -99,7 +99,7 @@ https://github.com/grails-fields-plugin/grails-fields/compare/v2.1.1...v2.1.4[Gi
 
 _2015_04_26_
 
-* See https://github.com/grails-fields-plugin/grails-fields/issues?q=milestone%3A1.5+is%3Aclosed[Browse issues] 
+* See https://github.com/gpc/fields/issues/?q=milestone%3A1.5+is%3Aclosed[Browse issues] 
 
 WARNING: See <<usage,Usage>> and <<customizingFieldRendering,Customizing Field Rendering>> for breaking changes.
 
@@ -111,7 +111,7 @@ WARNING: See <<usage,Usage>> and <<customizingFieldRendering,Customizing Field R
 * Configuring caching in dev mode (Issue #139)
 * byte[] and Byte[] arrays types now look for files in byteArray folders (general for all array types) (Issue #144)
 
-https://github.com/grails-fields-plugin/grails-fields/issues?q=is%3Aissue+milestone%3A1.4+is%3Aclosed[Browse issues] 
+https://github.com/gpc/fields/issues/?q=is%3Aissue+milestone%3A1.4+is%3Aclosed[Browse issues] 
 
 === Version 1.3
 
@@ -121,7 +121,7 @@ _2012-07-31_
 * Adds the _f:display_ tag.
 * Supports overriding templates by property type or by default in individual controllers and actions.
 
-https://github.com/grails-fields-plugin/grails-fields/issues?milestone=9&state=closed[Browse issues] 
+https://github.com/gpc/fields/issues/?milestone=9&state=closed[Browse issues] 
 Thanks to https://github.com/cdeszaq,[Rick Jensen] https://github.com/delight,[Konstantinos Kostarellis] https://github.com/guspower[Gus Power] and https://github.com/eliotsykes[Eliot Sykes] for their contributions.
 
 
@@ -133,7 +133,7 @@ _2012-03-16_
 * Pass attributes from `f:field` to the rendered input using `input-` prefix.
 * Optionally use entire property path for label key.
 
-https://github.com/grails-fields-plugin/grails-fields/issues?milestone=8&state=closed[Browse issues] 
+https://github.com/gpc/fields/issues/?milestone=8&state=closed[Browse issues] 
 Thanks to https://github.com/bluesliverx[Brian Saville] and https://github.com/OverZealous[OverZealous] for contributions.
 
 
@@ -145,7 +145,7 @@ _2012-03-11_
 * Adds the _prefix_ attribute.
 * Support `widget:'textarea'` constraint.
 
-https://github.com/grails-fields-plugin/grails-fields/issues?milestone=7&state=closed[Browse issues] 
+https://github.com/gpc/fields/issues/?milestone=7&state=closed[Browse issues] 
 Thanks to https://github.com/bluesliverx[Brian Saville] for contributions.
 
 
@@ -154,32 +154,32 @@ Thanks to https://github.com/bluesliverx[Brian Saville] for contributions.
 
 _2012-02-13_: Bugfix release.
 
-https://github.com/grails-fields-plugin/grails-fields/issues?milestone=5&state=closed[Browse issues] 
+https://github.com/gpc/fields/issues/?milestone=5&state=closed[Browse issues] 
 
 === Version 1.0.3
 
 
 _2012-02-09_: Bugfix release.
 
-https://github.com/grails-fields-plugin/grails-fields/issues?milestone=4&state=closed[Browse issues] 
+https://github.com/gpc/fields/issues/?milestone=4&state=closed[Browse issues] 
 
 === Version 1.0.2
 
 
 _2012-02-07_: Bugfix release.
 
-https://github.com/grails-fields-plugin/grails-fields/issues?milestone=3&state=closed[Browse issues] 
+https://github.com/gpc/fields/issues/?milestone=3&state=closed[Browse issues] 
 
 === Version 1.0.1
 
 
 _2012-02-03_: Bugfix release.
 
-https://github.com/grails-fields-plugin/grails-fields/issues?milestone=2&state=closed[Browse issues] 
+https://github.com/gpc/fields/issues/?milestone=2&state=closed[Browse issues] 
 
 === Version 1
 
 
 _2012-02-01_: Initial release.
 
-https://github.com/grails-fields-plugin/grails-fields/issues?milestone=1&state=closed[Browse issues] 
+https://github.com/gpc/fields/issues/?milestone=1&state=closed[Browse issues] 
